@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.755 2008/09/13 10:24:00 martin Exp $
+# $Id: CHANGES,v 1.756 2008/09/24 23:46:39 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.3.3 (2008/??/??)
+ - (2008/09/24) Fixed bug# 3321 - "(" or ")" in user name is braking ldap query
+    for agent and customer auth.
  - (2008/09/13) Fixed bug# 3289 - Error when trying to delete an answer (with
     std attachment) in admin interface.
  - (2008/09/12) Fixed bug# 3292 - Missing entries in the generic agent mask if
